web/src/assets/css/DetailDevice.css
.topNameContainer h3 {
    color: #fff;
}

.download-button{
    height: 42px;
    width: 42px;
    border-radius: 4px;
    background-color: #2F2E31;
    padding-top: 9px;
    margin-left: 1em;
}

.download-button:hover{
    background-color: #262527;
    cursor: pointer;
}

.boutons-generer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 20px;
    text-align: center;
}

.img-qrcode{
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2em;
}

.bodyContainer {
    display: flex;
    flex-direction: row;
    width: 90%;
}

.DetailQRCode {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 4px;
    margin-left: 5%;
    padding: 2%;
    background-color: #3B3B3F;
}

.leftBodyContainer {
    background-color: #3B3B3F;
}

.rightBodyContainer {
    background-color: #3B3B3F;
}
.buttonsContainer{
    display: flex;
    align-items: center;
}
.issuesContainer{
    margin-top: 50px;
}

.download-button > .anticon svg {
    width: 1.5em;
    height: 1.5em;
}

.DeviceTitle {
    font-weight: bold;
    font-size: 55px;
    margin-bottom: 0;
    margin-right: 1%;
}

@media only screen and (max-width: 950px) {
    .DeviceTitle {
        font-size: 2.5em;
    }

    .DetailQRCode {
        width: 95%;
        border-radius: 4px;
        padding: 40px;
        margin-left: 0;
        background-color: #3B3B3F;
    }

    .download-button{
        height: 4.7em;
        width: 4.7em;
        border-radius: 4px;
        background-color: #2F2E31;
        padding-top: 9px;
    }

    .download-button > .anticon svg {
        width: 2em;
        height: 2.5em;
    }
}

